--- a/packages/resume/package.json
+++ b/packages/resume/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "resume",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
+    "@types/negotiator": "^0.6.3",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "negotiator": "^0.6.3",
     "next": "14.2.3",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -22,5 +19,15 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
-  }
+  },
+  "name": "resume",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "format": "prettier --write ./src",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "version": "0.1.0"
 }
