--- a/packages/resume/package.json
+++ b/packages/resume/package.json
@@ -24,6 +24,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "check": "tsc --noEmit",
     "dev": "next dev",
     "format": "prettier --write ./src",
     "lint": "next lint",
