--- a/packages/resume/package.json
+++ b/packages/resume/package.json
@@ -1,23 +1,24 @@
 {
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@types/negotiator": "^0.6.3",
+    "@formatjs/intl-localematcher": "^0.8.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/negotiator": "^0.6.4",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.11",
-    "negotiator": "^0.6.3",
-    "next": "14.2.3",
-    "prettier": "^3.2.5",
-    "react": "^18",
-    "react-dom": "^18"
+    "dayjs": "^1.11.19",
+    "negotiator": "^1.0.0",
+    "next": "16.1.6",
+    "prettier": "^3.8.1",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "@types/node": "^25",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   },
   "name": "resume",
